<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dasbor"
            android:icon="@drawable/ic_dasbor"
            android:title="@string/dasbor"/>
        <item
            android:id="@+id/produk"
            android:icon="@drawable/ic_produk"
            android:title="@string/produk"/>
        <item
            android:id="@+id/pesanan"
            android:icon="@drawable/ic_pesanan"
            android:title="@string/pesanan"/>
        <item
            android:id="@+id/transaksi"
            android:icon="@drawable/ic_transaksi"
            android:title="@string/transaksi"/>
        <item
            android:id="@+id/pengaturan"
            android:icon="@drawable/ic_setting"
            android:title="@string/pengaturan"/>
    </group>

</menu>