<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:elevation="10dp"
        android:layout_width="105dp"
        android:layout_height="100dp"
        android:background="@drawable/gambar1"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_back_login"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back2"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blacksemu"
        android:textSize="20sp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/welcome_back"/>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_2"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blacksemu"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/email_username"/>
        <EditText
            android:id="@+id/edt_username_login"
            android:padding="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:textColor="@color/blacksemu"
            android:fontFamily="@font/poppinsregular"
            android:background="@drawable/bg_edittxt"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blacksemu"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/edt_password"
            android:padding="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/blacksemu"
            android:fontFamily="@font/poppinsregular"
            android:background="@drawable/bg_edittxt"
            android:autofillHints="password"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blacksemu"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/confirm_password"/>
        <EditText
            android:id="@+id/edt_confirm_password"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/blacksemu"
            android:padding="10dp"
            android:fontFamily="@font/poppinsregular"
            android:background="@drawable/bg_edittxt"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_login2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"/>
        <LinearLayout
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blacksemu"
                android:textSize="15sp"
                android:fontFamily="@font/poppinsmedium"
                android:layout_gravity="center"
                android:text="@string/sudah_punya_akun"/>
            <TextView
                android:id="@+id/txt_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/bg_button"
                android:text="@string/daftar"
                android:textSize="15sp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>