<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".RegistrasiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:elevation="10dp"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:background="@drawable/gambar1"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_back_regis"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_width="25dp"
                android:elevation="10dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back2"
                android:contentDescription="@string/todo" />
        </LinearLayout>
        <ImageView
            android:layout_marginStart="30dp"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_login"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blacksemu"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/wellbord_onbord"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_help_you_meet_up_your_tasks"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/blacksemu"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blacksemu"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/edt_email_regis"
            android:padding="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:textColor="@color/blacksemu"
            android:fontFamily="@font/poppinsregular"
            android:background="@drawable/bg_edittxt"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blacksemu"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/username"/>
        <EditText
            android:id="@+id/edt_username_regis"
            android:padding="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/blacksemu"
            android:fontFamily="@font/poppinsregular"
            android:background="@drawable/bg_edittxt"
            android:autofillHints="password"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blacksemu"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/edt_passwordregis"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/blacksemu"
            android:padding="10dp"
            android:fontFamily="@font/poppinsregular"
            android:background="@drawable/bg_edittxt"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blacksemu"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/confirm_password"/>
        <EditText
            android:id="@+id/edt_confirm_password"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/blacksemu"
            android:padding="10dp"
            android:fontFamily="@font/poppinsregular"
            android:background="@drawable/bg_edittxt"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_regis2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_button"
            android:text="@string/registrasi"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"/>
        <LinearLayout
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blacksemu"
                android:textSize="15sp"
                android:fontFamily="@font/poppinsmedium"
                android:layout_gravity="center"
                android:text="@string/sudah_punya_akun"/>
            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/bg_button"
                android:text="Login"
                android:textSize="15sp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>


</LinearLayout>
</LinearLayout>